# frcallyouneed

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  site_settings.yml  sitemap.xml
Electrical/Intro/: index.html
Mechanical/Basics/: index.html
Programming/Intro/: index.html
README/: index.html
Strategy/Applications/: index.html
Strategy/Basics/: index.html
docs/: index.md
docs/README/: README.md
search/: search_index.json
